--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
       color: #333;
     }
     header {
-      background-color: #00695c;
+      background: url('https://images.unsplash.com/photo-1581093588401-10f49f4d431d') center/cover no-repeat;
       color: white;
-      padding: 20px;
+      padding: 60px 20px;
       text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
     }
     nav {
       background-color: #004d40;
@@ -27,15 +31,10 @@
       color: white;
       margin: 0 15px;
       text-decoration: none;
+      font-weight: bold;
     }
     section {
-      padding: 20px;
-    }
-    footer {
-      background-color: #00695c;
-      color: white;
-      text-align: center;
-      padding: 15px;
+      padding: 40px 20px;
     }
     .services {
       display: grid;
@@ -47,17 +46,32 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .service img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+    footer {
+      background-color: #00695c;
+      color: white;
+      text-align: center;
+      padding: 15px;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>TN Maphalala Holdings</h1>
-    <p>Expert Electrical & Air-conditioning Services</p>
+    <p>Professional Electrical & Air-conditioning Solutions</p>
   </header>
 
   <nav>
     <a href="#services">Services</a>
+    <a href="pricing.html">Pricing</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -65,24 +79,29 @@
     <h2>Our Services</h2>
     <div class="services">
       <div class="service">
+        <img src="https://images.unsplash.com/photo-1599407391239-dbd2a1c19f3b" alt="Air-conditioning">
         <h3>Air-conditioning</h3>
-        <p>Professional repair and installation of all air-conditioning units for homes and businesses.</p>
+        <p>Repair and installation of residential and commercial air-conditioning systems.</p>
       </div>
       <div class="service">
+        <img src="https://images.unsplash.com/photo-1581090700227-4c4b9071c83f" alt="Electrical Work">
         <h3>Electrical Work</h3>
-        <p>All types of electrical installations and repairs, ensuring safety and compliance with regulations.</p>
+        <p>Safe and certified electrical repairs, installations, and upgrades.</p>
       </div>
       <div class="service">
+        <img src="https://images.unsplash.com/photo-1613577752872-d5dc9d1c5802" alt="Solar Systems">
         <h3>Solar Systems</h3>
-        <p>Design and installation of complete solar power systems to reduce your energy bills and carbon footprint.</p>
+        <p>Design and installation of off-grid and hybrid solar power systems.</p>
       </div>
       <div class="service">
+        <img src="https://images.unsplash.com/photo-1624977112651-b42cd98136e3" alt="Solar Geysers">
         <h3>Solar Geysers</h3>
-        <p>Eco-friendly and cost-effective solar water heating solutions installed and maintained by our team.</p>
+        <p>Installation and maintenance of solar geyser systems for energy-efficient hot water.</p>
       </div>
       <div class="service">
-        <h3>Smart Home Solutions</h3>
-        <p>Upgrade your home with smart devices, automation, and modern control systems.</p>
+        <img src="https://images.unsplash.com/photo-1590672343129-fd2d345cb8b2" alt="Smart Home">
+        <h3>Smart Home</h3>
+        <p>Home automation, smart lighting, security and voice-controlled devices.</p>
       </div>
     </div>
   </section>
@@ -90,7 +109,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p><strong>Address:</strong> Radiokop, Roodepoort, Gauteng, South Africa</p>
-    <p><strong>Phone:</strong> 083 255 9953</p>
+    <p><strong>Phone:</strong> <a href="tel:+27832559953">083 255 9953</a></p>
     <p><strong>Email:</strong> <a href="mailto:thembamaphalala63@gmail.com">thembamaphalala63@gmail.com</a></p>
   </section>
 
