--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background: url('https://images.unsplash.com/photo-1581094773851-6c9b5cba7ef4') center/cover fixed no-repeat;
       color: #333;
     }
     header {
-      background: url('https://images.unsplash.com/photo-1581093588401-10f49f4d431d') center/cover no-repeat;
+      background: rgba(0, 0, 0, 0.6);
       color: white;
       padding: 60px 20px;
       text-align: center;
@@ -35,6 +35,7 @@
     }
     section {
       padding: 40px 20px;
+      background-color: rgba(255, 255, 255, 0.9);
     }
     .services {
       display: grid;
@@ -77,29 +78,30 @@
 
   <section id="services">
     <h2>Our Services</h2>
+    <p>Our team of trade-tested electricians and technicians are highly skilled and experienced in the following areas:</p>
     <div class="services">
       <div class="service">
-        <img src="https://images.unsplash.com/photo-1599407391239-dbd2a1c19f3b" alt="Air-conditioning">
+        <img src="https://images.unsplash.com/photo-1599407391239-10d4b0e3ae55?auto=format&fit=crop&w=600&q=80" alt="Air-conditioning">
         <h3>Air-conditioning</h3>
         <p>Repair and installation of residential and commercial air-conditioning systems.</p>
       </div>
       <div class="service">
-        <img src="https://images.unsplash.com/photo-1581090700227-4c4b9071c83f" alt="Electrical Work">
+        <img src="https://images.unsplash.com/photo-1581090700227-4c4b9071c83f?auto=format&fit=crop&w=600&q=80" alt="Electrical Work">
         <h3>Electrical Work</h3>
         <p>Safe and certified electrical repairs, installations, and upgrades.</p>
       </div>
       <div class="service">
-        <img src="https://images.unsplash.com/photo-1613577752872-d5dc9d1c5802" alt="Solar Systems">
+        <img src="https://images.unsplash.com/photo-1613577752872-d5dc9d1c5802?auto=format&fit=crop&w=600&q=80" alt="Solar Systems">
         <h3>Solar Systems</h3>
         <p>Design and installation of off-grid and hybrid solar power systems.</p>
       </div>
       <div class="service">
-        <img src="https://images.unsplash.com/photo-1624977112651-b42cd98136e3" alt="Solar Geysers">
+        <img src="https://images.unsplash.com/photo-1624977112651-b42cd98136e3?auto=format&fit=crop&w=600&q=80" alt="Solar Geysers">
         <h3>Solar Geysers</h3>
         <p>Installation and maintenance of solar geyser systems for energy-efficient hot water.</p>
       </div>
       <div class="service">
-        <img src="https://images.unsplash.com/photo-1590672343129-fd2d345cb8b2" alt="Smart Home">
+        <img src="https://images.unsplash.com/photo-1590672343129-fd2d345cb8b2?auto=format&fit=crop&w=600&q=80" alt="Smart Home">
         <h3>Smart Home</h3>
         <p>Home automation, smart lighting, security and voice-controlled devices.</p>
       </div>
